# exdex-pages

./: index.html
website/backend/: main.py  run_local_llm.py  run_local_tts.py  run_vosk_asr.py
website/bitcoin-manager/: README.md  index.html
website/bitcoin-manager/css/: styles.css
website/bitcoin-manager/js/: app.js  bhe-ticker.js  bitcoin.js  encryption-client.js  exdex-home-launcher.js  googlepay.js  walletconnect.js  workflow-visualizer.js
website/cc/: index.html
website/css/: advanced-visuals.css  cc-wireframe.css  downloads-wireframe.css  iliquid-wireframe.css  investments.css  obsidion-sphere.css  pool.css  style.css  styles-part2.css  styles-part3.css  styles.css  token-placeholder.css  trading-bot.css
website/css/cold_wallets/: wallet_0Aa5.json
website/downloads/: index.html
website/iliquid/: index.html
website/js/: 3d-trading-sphere.js  coin-payment.js  config-example.js  ecosystem-visualization.js  exde-pool.js  investments.js  knox-wallet.js  main.js  obsidion-sphere.js  pool-interface.js  samantha.js  stripe-payment.js  trading-bot.js
website/platformNEW/: cc-wireframe.html  downloads-wireframe.html  flow-wireframe.html  iliquid-wireframe.html  platformNEW.code-workspace  pyproject.toml  setup.py
website/stucture/: Dockerfile  docker-compose.yml  ecosystem.html  index.html  investments.html  netlify.toml  requirements.txt  trading-bot.html  windsurf_deployment.yaml
